# kleagmfx

./: .gitignore  404.html  README.md  combined_test.py  expression_pedal.py  index.html  joystick.py  joystick_as_mouse_test.py  joystick_test.py  keypad.py  keypad_int_test.py  keypad_test.py  leds_int_test.py  leds_test.py  mcp_button.py  mcp_led.py  mkdocs.yml  multieffect.py  multieffect_int.py  pyproject.toml  rotary_encoder.py  rotary_encoder_int.py  rotary_encoder_int_test.py  rotary_encoder_test.py  rotary_encoders_int_test.py  rotary_encoders_test.py  sitemap.xml  test_int.py
.github/workflows/: ci.yml
architecture/: index.html
docs/: index.md
installation/: index.html
kicad_board/: .gitignore  multieff.kicad_pcb  multieff.kicad_prl  multieff.kicad_pro  multieff.kicad_sch  multieff.rules
kicad_board/.kinotes/: KiNotes_kicad_board.md  multieff_worklog_20260406.md
kicad_board/.kinotes/backups/: 20260406_105647_todos.json  20260406_105648_todos.json  20260406_105649_todos.json  20260406_105650_todos.json  20260406_105651_todos.json  20260406_105652_todos.json  20260406_105653_todos.json  20260406_105703_todos.json  20260406_105712_KiNotes_kicad_board.md
search/: search_index.json
usage/: index.html
