[project]
name = "multieffects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
# Hardware & GPIO
    "Adafruit-Blinka==8.66.2",
    "Adafruit-Blinka-Raspberry-Pi5-Neopixel==1.0.0rc2",
    "adafruit-circuitpython-ads1x15==2.4.2",
    "adafruit-circuitpython-ads7830==1.0.3",
    "adafruit-circuitpython-mcp230xx==2.5.18",
    "adafruit-circuitpython-requests==4.1.13",
    "gpiozero==2.0.1",
    "pigpio==1.78",
    "RPi.GPIO==0.7.1",
    "rpi-lgpio==0.6",
    "rpi-ws281x==5.0.0",
    "sense-hat==2.6.0",
    "spidev==3.5",
    "pyusb==1.3.1",
    "pyserial==3.5",

    "av==12.3.0",
    "mido==1.2.10",
    "python-rtmidi==1.4.7",

    "psutil==5.9.4",
    "numpy==1.24.2",
    "evdev==1.6.1",
    "pynput==1.7.5",
    "tqdm==4.66.3",
    "thonny==4.1.4",

    "rich==13.3.1",
]
